# mutfunc

./: .gitignore  BUILD.ipynb  Dockerfile  Mutfunc_Home.py  README.md  app.py  docker-build.ipynb  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
assets/: custom.css  mutationimpact-theme.css
assets_gtag/: analytics.js
examples/ecoli_pathogenicity/: ecoli_pathogenicity.ipynb  ecoli_pathogenicity_colab.ipynb
examples/structure/: read_interface_residues.ipynb
pages/: 1_Input_Variants.py  2_Browse_Results.py  browse.py  input.py  variants.py
src/mutfunc/: __init__.py  core.py  missense_ecoli.py  structure.py
util/: db_utils.py  footer.py  variant_parser.py
webapp/: Mutfunc_Home.py  README.md  SETUP.ipynb  requirements.txt
webapp/.devcontainer/: devcontainer.json
webapp/docker/: Dockerfile
webapp/pages/: 2_Browse_Results.py
