[project]
name = "mutfunc"
version = "26-dev"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "biopython>=1.87",
    "dash>=4.2.0",
    "dash-ag-grid>=35.2.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-bootstrap-templates>=2.1.0",
    "dash-molstar>=1.3.2",
    "gunicorn>=26.0.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "unipressed>=1.4.0",
]
